[gd_scene load_steps=7 format=3 uid="uid://bdgsh5gdbg01q"]

[ext_resource type="Texture2D" uid="uid://cl7x4kjfennsx" path="res://texture/health_bar_background.png" id="1_7hv7k"]
[ext_resource type="Script" path="res://script/HealthDisplay.gd" id="1_uj3yb"]
[ext_resource type="Texture2D" uid="uid://3wniu0a7e0fu" path="res://texture/health_bar_front.png" id="2_xh8wg"]
[ext_resource type="Texture2D" uid="uid://cqf0px0fkc0hj" path="res://texture/hurt_overlay.png" id="3_ns282"]

[sub_resource type="LabelSettings" id="LabelSettings_xdu56"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_2fsn7"]
font_size = 32

[node name="HealthDisplay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uj3yb")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -83.0
offset_right = 715.0
grow_vertical = 0

[node name="TextureProgressBar" type="TextureProgressBar" parent="HBoxContainer"]
layout_mode = 2
value = 100.0
rounded = true
texture_under = ExtResource("1_7hv7k")
texture_progress = ExtResource("2_xh8wg")

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "PV: 100/100"
label_settings = SubResource("LabelSettings_xdu56")
uppercase = true

[node name="HurtOverlay" type="TextureRect" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ns282")

[node name="OrbCountLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -208.0
offset_bottom = 45.0
grow_horizontal = 0
text = "Collected: 0/0"
label_settings = SubResource("LabelSettings_2fsn7")
